--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta property="og:title" content="Gas Safety Certificate Booking - Renew Your Certificate Online" />
     <meta property="og:description" content="Book your gas safety certificate renewal online. Get quotes and manage your property's gas safety certificates easily." />
     <meta property="og:image" content="https://gas-safety-booking.vercel.app/og-image.png" />
+    <meta property="og:image:secure_url" content="https://gas-safety-booking.vercel.app/og-image.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Gas Safety Certificate Booking" />
